--- a/SLAM/SLAM/SLAM.vcxproj
+++ b/SLAM/SLAM/SLAM.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="GpioDefs.h" />
     <ClInclude Include="Motor.h" />
     <ClInclude Include="MotorController.h" />
+    <ClInclude Include="MotorTest.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="App.xaml.h">
       <DependentUpon>App.xaml</DependentUpon>
@@ -180,6 +181,7 @@
     </ClCompile>
     <ClCompile Include="Motor.cpp" />
     <ClCompile Include="MotorController.cpp" />
+    <ClCompile Include="MotorTest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
