--- a/SLAM/SLAM/SLAM.vcxproj.filters
+++ b/SLAM/SLAM/SLAM.vcxproj.filters
@@ -18,6 +18,7 @@
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Motor.cpp" />
     <ClCompile Include="MotorController.cpp" />
+    <ClCompile Include="MotorTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -26,6 +27,7 @@
     <ClInclude Include="Motor.h" />
     <ClInclude Include="MotorController.h" />
     <ClInclude Include="GpioDefs.h" />
+    <ClInclude Include="MotorTest.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\LockScreenLogo.scale-200.png">
